This commit will fix spacing of the H1

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ h1 {
   text-shadow: 2px 2px #000;
   font-family: Georgia, serif;
   color: #fff;
+  padding-top: .6em;
   position: relative;
   z-index: 100;
 }
